[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Objects/DoorDouble.gd" type="Script" id=1]
[ext_resource path="res://assets/door_side.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 4 )

[sub_resource type="CircleShape2D" id=1]
radius = 21.0238

[sub_resource type="Animation" id=3]
resource_name = "Open"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("LeftWing:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.406126, 1 ),
"update": 0,
"values": [ Vector2( -8, 0 ), Vector2( -24, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightWing:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.406126, 1 ),
"update": 0,
"values": [ Vector2( 8, 0 ), Vector2( 24, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "toggle_blocking"
}, {
"args": [ true ],
"method": "toggle_blocking"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RightWing:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftWing:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BlockingShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="DoorDouble" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="LeftWing" type="Sprite" parent="."]
position = Vector2( -8, 0 )
texture = ExtResource( 2 )

[node name="RightWing" type="Sprite" parent="."]
position = Vector2( 8, 0 )
scale = Vector2( -1, 1 )
texture = ExtResource( 2 )

[node name="BlockingShape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Open = SubResource( 3 )
anims/RESET = SubResource( 4 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
